# rp-pico-rs-playground

./: Cargo.toml  Embed.toml  LICENSE
.cargo/: config.toml
big_firmware/: Cargo.toml
big_firmware/src/: blob.txt  main.rs
blink/: Cargo.toml
common_extensions/src/: lib.rs
defmt_test/: Cargo.toml
defmt_test/src/: main.rs
defmt_test/tests/: temperature_tests.rs
emergency/: flash_nuke.uf2
enc28j60_tcp/: Cargo.toml
enc28j60_tcp/src/: main.rs
enc28j60_test/: Cargo.toml
enc28j60_test/src/: main.rs
on_chip_tests/: Cargo.toml
on_chip_tests/tests/: led_test.rs  temperature_tests.rs
overclock/: Cargo.toml
overclock/src/: custom_clock.rs  main.rs
projects/big_firmware/src/: lib.rs
projects/blink/: Cargo.toml
projects/common_extensions/: Cargo.toml
projects/common_extensions/src/: lib.rs  temperature.rs
projects/enc28j60_tcp/: Cargo.toml
projects/enc28j60_tcp/src/: main.rs
projects/on_chip_tests/: Cargo.toml
projects/on_chip_tests/tests/: led_test.rs  rom_func_tests.rs  temperature_tests.rs
projects/overclock/: Cargo.toml
projects/overclock/src/: main.rs
projects/rtic_monotonic/: Cargo.toml
projects/signal_generator/src/: main.rs
rtic_monotonic/src/: main.rs
signal_generator/: Cargo.toml
usb_uart_adapter/: Cargo.toml
usb_uart_adapter/src/: main.rs  uart_config.rs
usb_uart_adapter/src/uart_config/: usbd_conversions.rs
usb_x_adapter/: Cargo.toml
usb_x_adapter/src/: main.rs  uart_config.rs
usb_x_adapter/src/uart_config/: uart_conversions.rs  usbd_conversions.rs
