[workspace]
members = ["blink", "big_firmware", "enc28j60_tcp", "on_chip_tests"]

[workspace.dependencies]
rp-pico = "0.6.0"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
fugit = "0.3.6"

defmt = "0.3.2"
defmt-rtt = "0.4.0"
defmt-test = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

#defmt pacthes
[patch.crates-io]
defmt = { git = "https://github.com/knurling-rs/defmt" }
defmt-rtt = { git = "https://github.com/knurling-rs/defmt" }
panic-probe = { git = "https://github.com/knurling-rs/defmt" }
defmt-test = { git = "https://github.com/knurling-rs/defmt" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
