[package]
edition = "2021"
name = "big_firmware"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
fugit = "0.3.6"

defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

rp-pico = "0.5.0"

[lib]
proc-macro = true
