[package]
edition = "2021"
name = "big_firmware"
version = "0.1.0"

[dependencies]
rp-pico.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
fugit.workspace = true

defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true

[lib]
proc-macro = true
