[package]
edition = "2021"
name = "enc28j60_tcp"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12"

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

rp-pico = "0.4"

[dependencies.enc28j60]
git = "https://github.com/Dblm0/enc28j60"
rev = "32e7b1aafbdab76e608d743d2c620514c3e33da9"
features = ["smoltcp"]

[dependencies.smoltcp]
git = "https://github.com/smoltcp-rs/smoltcp"
version = "0.8.1"
default-features = false
features = ["proto-ipv4", "socket-tcp", "medium-ethernet", "defmt"]
