[package]
name = "on_chip_tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
rp-pico.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
fugit.workspace = true

defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
defmt-test.workspace = true

num-traits = { version = "0.2", default-features = false }

[[test]]
name = "temperature_tests"
harness = false

[[test]]
name = "led_test"
harness = false

[[test]]
name = "rom_func_tests"
harness = false
