[package]
name = "signal_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m.workspace = true
rp-pico.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
fugit.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true

num = { version = "0.4.0", default-features = false, features = ["libm"] }
