[package]
edition = "2021"
name = "enc28j60_tcp"
version = "0.1.0"

[dependencies]
rp-pico.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
fugit.workspace = true

defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true

[dependencies.enc28j60]
git = "https://github.com/Dblm0/enc28j60"
branch = "feat_smoltcp"
version = "0.4.0"
features = ["smoltcp"]

[dependencies.smoltcp]
git = "https://github.com/smoltcp-rs/smoltcp"
version = "0.9.1"
default-features = false
features = ["proto-ipv4", "socket-tcp", "medium-ethernet", "defmt"]
